Fixed help text is partially cut off on taxonomy term list when there are no...

--- a/styles/base/_help.scss
+++ b/styles/base/_help.scss
@@ -8,3 +8,8 @@
     margin: 0;
   }
 }
+
+#edit-help {
+  font-size: var(--gin-font-size-s);
+  color: var(--gin-color-text-light);
+}
