--- a/styles/components/webform.scss
+++ b/styles/components/webform.scss
@@ -1,6 +1,10 @@
 .webform-filter-form {
   margin-bottom: var(--gin-spacing-xl);
 
+  > .container-inline {
+     margin-block: 0;
+  }
+
   .details-wrapper {
     margin-top: 0;
     margin-bottom: var(--gin-spacing-xs);
